fix: find bar ui layout issues fix

--- a/src/styles/brackets.less
+++ b/src/styles/brackets.less
@@ -2394,6 +2394,10 @@ a, img {
         border-left: none;
         margin-left: 0;
         border-radius: 0;
+        margin-top: -1px;
+    }
+    #replace-all {
+        margin-top: -1px;
     }
 
     .close {
